Trying to fix layout on iphone 13.

--- a/13-webgl/extras/LightingWithTexture.css
+++ b/13-webgl/extras/LightingWithTexture.css
@@ -4,13 +4,18 @@
     --mleft: 10px;
 }
 
-* {
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
 body {
     background-color: antiquewhite;
+    width: 100%;
+    overflow-x: hidden;
 }
 #theCanvas {
     width: var(--canvasw);
